<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout2"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/temperature_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

            android:text="@string/temperature_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:id="@+id/temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/temperature_label"
            android:layout_alignLeft="@+id/temperature_label"

            android:layout_alignRight="@+id/temperature_label"
            android:layout_alignStart="@+id/temperature_label"
            android:layout_below="@+id/temperature_label"
            android:layout_marginTop="37dp"
            android:gravity="center_horizontal"
            android:text="@string/temperature_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/signal_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/signal_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/signal_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/signal_label"
            android:layout_alignLeft="@+id/signal_label"
            android:layout_alignRight="@+id/signal_label"
            android:layout_alignStart="@+id/signal_label"
            android:layout_below="@+id/signal_label"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/signal_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout3">



            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_text"
                android:inputType="numberDecimal"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/setabsolute_btn"
                android:layout_alignEnd="@+id/setabsolute_btn"
                android:layout_alignLeft="@+id/setabsolute_btn"
                android:layout_alignStart="@+id/setabsolute_btn" />




        <TextView
            android:id="@+id/absolute_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"

            android:text="@string/absolute_value"
            android:textAppearance="?android:attr/textAppearanceMedium"

            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/editText"
            android:textSize="15sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/setabsolute_btn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absolute_btn"
            android:id="@+id/setabsolute_btn"

            android:layout_below="@+id/editText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/current_value_label"
            android:id="@+id/currentvalue_label"
            android:layout_alignTop="@+id/setabsolute_btn"
            android:layout_toLeftOf="@+id/editText"
            android:textSize="15sp"
            android:textIsSelectable="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/current_value"
            android:id="@+id/currentvalue_value"
            android:layout_gravity="left|bottom"
            android:layout_below="@+id/currentvalue_label"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignRight="@+id/currentvalue_label"
            android:layout_alignEnd="@+id/currentvalue_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_marginTop="54dp"
        android:text="@string/super_signal_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/supersignal_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:id="@+id/test_btn"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_clear"
            android:id="@+id/test_clear_btn"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/test_btn"
            android:layout_toEndOf="@+id/test_btn" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:id="@+id/test_view"
            android:layout_below="@+id/test_btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>


</RelativeLayout>

